--- a/css/style.css
+++ b/css/style.css
@@ -30,8 +30,16 @@ header a{
 .header-nav{
     height: 130px;
     width: 100%;
-    background-color: rgba(173, 228, 245, 0.678);
+    background-color: rgba(173, 228, 245);
     line-height: 120px;
+}
+.fixed{
+    position: fixed;   
+    width: 100%;
+    top:0;
+}
+.fixedspace{
+    margin-top:130px;
 }
 
 .nav-top-left .fas.fa-angle-down{
@@ -43,7 +51,6 @@ header a{
 }
 .header-nav-top{
     height: 100%;
-    background-color: orangered;
 }
 ul{
     list-style: none;
