--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@
     margin: 0;
     box-sizing: border-box;
 }
+body{
+  width: 100%;
+}
 .container{
     width: 80%;
     margin: auto;
@@ -23,7 +26,7 @@ header a{
     float: right;
 }
 .header-nav{
-    width: 100%;
+    width: 80em;
     background-color:white;
     line-height: 100px;
 }
@@ -33,6 +36,7 @@ header a{
     top:0;
     left: 0;
     border-bottom: 1px solid black;
+    z-index: 100;
 }
 .fixedspace{
     margin-top:110px;
@@ -67,17 +71,18 @@ ul{
     border-radius: 5px;
     padding:  10px;
     color: white;
+    
 }
 .btn-orange{
     background-color: rgb(245, 91, 45);
-    padding:11px;
+    padding:15px;
 }
 .btn-total-orange{
     color: orangered;
     border: 1px solid orangered;
 }
 .btn-large{
-    padding: 30px 40px;
+    padding: 40px 50px;
     font-size: 30px;
 }
 .header-nav.bottom{
@@ -126,11 +131,10 @@ ul{
     color: rgb(53, 49, 47);
 }
 main{
-    
     background-color:#F5F8FA;
 }
 .block-2{
-    margin-top: 110px;
+    margin-top: 100px;
 }
 .block-1{
     text-align: center;
@@ -142,12 +146,12 @@ main{
 }
 .block-1 p{
     font-size: 25px;
-    padding-top:60px ; 
+    padding-top:60px; 
 }
 .block-2{
-    height: 500px;
+    height: 550px;
     width: 100%;
-    border: 2px solid red;
+    box-shadow: 0 0 10px rgba(49, 49, 49, 0.644);
     border-radius: 5px;
 }
 .block-left{
@@ -158,11 +162,11 @@ main{
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    padding: 20px;
+    padding: 20;
 }
 .wrapper a{
-    font-size: 30px;
-
+    font-size: 25px;
+    display: block;
 }
 .block-left img{
     width: 100%;
@@ -170,19 +174,18 @@ main{
     padding-bottom:80px;
 }
 .block-left{
-    width: 30%;
+    width: 25%;
     height: 100%;
     text-align: center;
 }
 .block-2-right{
-    width: 70%;
+    width: 75%;
     height: 100%;
-    padding: 70px;
-}
-.block-2-right {
+    padding: 100px 120px 100px 0px;
     text-align: left;
     line-height: 50px;
 }
+
 .block-2-right > h1{
     font-size: 40px;
     padding-bottom: 80px;
@@ -194,17 +197,17 @@ main{
 .block-2-right > h2{
     text-transform: uppercase;
     font-size: 35px;
-    padding-bottom:30px ;
+    padding-bottom:40px;
 }
 .block-2-right > h2::after{
     content: "";
     float: right;
     width: 65%;
-    margin-top: 20px;
+    margin-top: 25px;
     height: 5px;
     background-color: grey;
 }
-.white-bg{
+.block-2{
     background-color: white;
 }
 .fas.fa-check-circle{
@@ -213,4 +216,96 @@ main{
 .block-2-right li{
     font-size: 25px;
     padding-right: 30px;
+}
+.sezione-tre-blocchi{
+    height: 1200px;
+    margin-top: 120px ;
+}
+.col.center{
+    margin: 0 5%;
+}
+.col{
+    padding: 30px;
+    width: 30%;
+    box-shadow: 0 0 10px rgba(49, 49, 49, 0.644);
+    border-radius: 5px;
+}
+.col .items-top{
+    width: 100%;
+    position: relative;
+    margin-bottom:50% 
+}
+.col .items-top >img{
+   width: 30%;
+   position: absolute;
+   top: 40px;
+   left: 35%;
+}
+.col .items-middle{
+    text-align: center;
+    line-height: 40px;
+}
+.col .items-middle p{
+    color: rgb(53, 49, 47);
+    font-size: 25px;
+    margin-bottom:20% ;
+}
+.col .items-middle h1{
+    font-size: 40px;
+    padding-bottom: 40px;
+}
+.col .items-middle::after{
+    content: "";
+    float: left;
+    width: 100%;
+    height: 3px;
+    background-color: grey;
+}
+.col .items-bottom{
+    text-align: center;
+    padding-top: 15% ;
+}
+.col .items-bottom span{
+    color: rgb(46, 44, 44);
+    font-size: 25px;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+.col .items-bottom ul{
+    margin-top: 30px;
+}
+.col .items-bottom ul li i{
+    padding-right: 20px;
+}
+.col .items-bottom ul li{
+    font-size: 25px;
+    text-align: left;
+    display: block;
+    padding-bottom: 5px;
+    color: rgb(53, 49, 47);
+}
+.col .items-bottom a{
+    font-size: 30px;
+    margin-top:80px;
+   display: inline-block;
+}
+.banner{    
+    margin-top: 100px;
+    width: 100%;
+    background-color: #00B5AC;
+    height: 1000px;
+}
+.banner .header-banner{
+    text-align: center;
+    padding-top: 100px;
+    line-height: 90px;
+}
+.banner .header-banner h1{
+    font-size: 80px;
+    color:white;
+    padding-bottom: 50px;
+}
+.banner .header-banner p{
+    font-size: 40px;
+    color: white;
 }
