--- a/css/style.css
+++ b/css/style.css
@@ -439,8 +439,8 @@ footer{
 }
 .far.fa-comment-alt{
 
-    background-color:#2D3E50;
-    padding:20px;
+    background-color:#546475;
+    padding:15px;
     border-radius: 50%; 
 }
 .block-foooter{
